--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bootstrap": "^5.3.0-alpha1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
